Bug 159712 - Sparklines don't take the space of the whole merged cell
Summary: Sparklines don't take the space of the whole merged cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.5.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Calc-Merge-Split Sparklines
  Show dependency treegraph
 
Reported: 2024-02-13 23:33 UTC by David García
Modified: 2025-04-17 18:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet (22.53 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-02-13 23:34 UTC, David García
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David García 2024-02-13 23:33:41 UTC
Description:
Sparklines only take the space of the original first cell of a merged cell.

Steps to Reproduce:
1. I merge two cells.
2. I try to create a new sparkline and place it on the merged cell, but Calc only allows me to place it on the fist original cell.
3. As expected, the sparkline only takes the space of the first original cell, the second one remaining empty.

Actual Results:
The sparkline is placed on the first original cell of the merged cell.

Expected Results:
The sparkline should be placed on the whole merged cell.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 1 David García 2024-02-13 23:34:04 UTC
Created attachment 192550 [details]
Spreadsheet
Comment 2 m_a_riosv 2024-02-15 13:05:02 UTC
Reproducible
Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 125fc2ce861c82592b261f2992c893b414396e56
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

But I'm not sure if it should be a request for enhancement better than a bug.
Comment 3 David García 2024-02-15 15:31:43 UTC
I'm not an expert, but I considered it to be a bug in the sense that LO allows to merge cells, and since cells are used to contain information, it makes sense for the information (in this case, a sparkline) to take the whole cell. Otherwise, the rest of the merged cell becomes useless: just empty space.
Comment 4 stragu 2024-02-27 16:28:02 UTC
Reproduced:

Version: 7.6.5.2 (X86_64) / LibreOffice Community
Build ID: 38d5f62f85355c192ef5f1dd47c5c0c0c6d6598b
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 5 Werner Tietz 2024-08-24 09:30:16 UTC
reproduced also in:
```
Version: 24.8.0.3 (AARCH64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Flatpak
Calc: threaded
```
Comment 6 Commit Notification 2025-04-15 12:49:01 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/57f793fd94e9692593b4f8e147c9295751116973

tdf#159712 sc: sparklines are not displayed correctly in merged cells

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 David García 2025-04-17 18:39:13 UTC
It works on the daily build. Thanks!

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7dddd449068d69ec2f47bfca2487f01fa7067fd0
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded