tdf#159712 sc: sparklines are not displayed correctly in merged cells

The sparklines are always rendered in the top-left corner and do not
take the space of the whole merged cell.

Change-Id: I735c180d135de79907dd685045d277cc357815fd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184152
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>